--- a/Austral-Equipos/Equipos/partes/motherboard/actualizar_mother.html
+++ b/Austral-Equipos/Equipos/partes/motherboard/actualizar_mother.html
@@ -162,11 +162,11 @@
     <div class="grid gap-6 mb-6 md:grid-cols-2 mt-14 ml-6">
        <div>
           <label for="txt_marca_mother" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Marca Motherboard</label>
-          <input type="text" id="txt_marca_mother" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\.5 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled>
+          <input type="text" id="txt_marca_mother" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\.5 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
       </div>
        <div>
               <label for="txt_modelo_mother" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Modelo </label>
-              <input type="text" id="txt_modelo_mother" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled>
+              <input type="text" id="txt_modelo_mother" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
         </div>
      </div>        
     <div class="ml-6 pt-10">
