--- a/Austral-Equipos/Equipos/partes/procesador/agregar_proce.html
+++ b/Austral-Equipos/Equipos/partes/procesador/agregar_proce.html
@@ -177,11 +177,11 @@
             <input type="text" id="txt_velocidad_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="10.10.158.xxx" required>
         </div>
         <div>
-            <label for="txt_nucleo_fisico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Descripción</label>
+            <label for="txt_nucleo_fisico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nucleos Físicos</label>
             <input type="text" id="txt_nucleo_fisico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Impresora ventas 50" required>
         </div>
         <div>
-            <label for="txt_nucleo_logico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Descripción</label>
+            <label for="txt_nucleo_logico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nucleos Lógicos</label>
             <input type="text" id="txt_nucleo_logico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Impresora ventas 50" required>
         </div>
     </div>        
