--- a/Austral-Equipos/Equipos/partes/procesador/eliminar_proce.html
+++ b/Austral-Equipos/Equipos/partes/procesador/eliminar_proce.html
@@ -6,7 +6,7 @@
     <script src="/js/procesador.js"></script>
     <title>Document</title>
 </head>
-<body onload="">
+<body onload="obtenerId();">
 
 <nav class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
     <div class="px-3 py-3 lg:px-5 lg:pl-3">
@@ -162,27 +162,27 @@
     <div class="grid gap-6 mb-6 md:grid-cols-2 mt-14 ml-6">
        <div>
           <label for="txt_marca_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Marca Procesador</label>
-          <input type="text" id="txt_marca_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\.5 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled>
+          <input type="text" id="txt_marca_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\.5 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 cursor-not-allowed" >
       </div>
        <div>
               <label for="txt_modelo_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Modelo </label>
-              <input type="text" id="txt_modelo_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled>
+              <input type="text" id="txt_modelo_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 cursor-not-allowed" >
         </div>
         <div>
             <label for="txt_socket_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Socket</label>
-            <input type="text" id="txt_socket_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled>
+            <input type="text" id="txt_socket_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 cursor-not-allowed">
       </div>
         <div>
             <label for="txt_velocidad_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Velocidad</label>
-            <input type="text" id="txt_velocidad_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"disabled>
+            <input type="text" id="txt_velocidad_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 cursor-not-allowed">
         </div>
         <div>
             <label for="txt_nucleo_fisico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nucleo Físico</label>
-            <input type="text" id="txt_nucleo_fisico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled>
+            <input type="text" id="txt_nucleo_fisico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 cursor-not-allowed">
         </div>
         <div>
             <label for="txt_nucleo_logico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nucleo Lógico</label>
-            <input type="text" id="txt_nucleo_logico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled>
+            <input type="text" id="txt_nucleo_logico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 cursor-not-allowed">
         </div>
     </div>        
     <div class="ml-6 pt-10">
