--- a/Austral-Equipos/Equipos/partes/procesador/actualizar_proce.html
+++ b/Austral-Equipos/Equipos/partes/procesador/actualizar_proce.html
@@ -23,7 +23,7 @@
             <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Austral</span>
           </a>
         </div>
-        <h2 class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Agregar Impresora</h2>
+        <h2 class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Procesadores</h2>
         <div class="flex items-center">
             <div class="flex items-center ml-3">
               <div>
@@ -161,28 +161,28 @@
    <form class="p-4 sm:ml-64 mt-10 mr-8">
     <div class="grid gap-6 mb-6 md:grid-cols-2 mt-14 ml-6">
        <div>
-          <label for="txt_marca_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Marca Impresora</label>
-          <input type="text" id="txt_marca_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\.5 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Epson" required>
+          <label for="txt_marca_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Marca</label>
+          <input type="text" id="txt_marca_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\.5 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required>
       </div>
        <div>
-              <label for="txt_modelo_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Modelo Impresora</label>
-              <input type="text" id="txt_modelo_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="L315" required>
+              <label for="txt_modelo_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Modelo</label>
+              <input type="text" id="txt_modelo_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required>
         </div>
         <div>
-            <label for="txt_socket_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Modelo Impresora</label>
-            <input type="text" id="txt_socket_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="L315" required>
+            <label for="txt_socket_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Socket</label>
+            <input type="text" id="txt_socket_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required>
       </div>
         <div>
-            <label for="txt_velocidad_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Numero Ip</label>
-            <input type="text" id="txt_velocidad_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="10.10.158.xxx" required>
+            <label for="txt_velocidad_proce" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Velocidad</label>
+            <input type="text" id="txt_velocidad_proce" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required>
         </div>
         <div>
-            <label for="txt_nucleo_fisico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Descripción</label>
-            <input type="text" id="txt_nucleo_fisico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Impresora ventas 50" required>
+            <label for="txt_nucleo_fisico" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nucleos Físicos</label>
+            <input type="text" id="txt_nucleo_fisico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required>
         </div>
         <div>
-            <label for="txt_nucleo_logico class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Descripción</label>
-            <input type="text" id="txt_nucleo_logico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Impresora ventas 50" required>
+            <label for="txt_nucleo_logico" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nucleos Lógicos</label>
+            <input type="text" id="txt_nucleo_logico" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2\/4 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required>
         </div>
     </div>        
     <div class="ml-6 pt-10">
